src/objects/Notification_Banner_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>The settings that are used in NotificationBanner component</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Activate/Deactivate notification banner</description>
        <inlineHelpText>Activate/Deactivate notification banner</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fields__c</fullName>
        <description>API name of the field(s) that values are required to be displayed in notification message. Multiple fields must be separated by comma.</description>
        <inlineHelpText>API name of the field(s) that values are required to be displayed in notification message. Multiple fields must be separated by comma.</inlineHelpText>
        <label>Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>The message that need to be displayed on the banner. This message can contain HTML and String formatting to display values from the fields specified in Field .</description>
        <inlineHelpText>The message that need to be displayed on the banner. This message can contain HTML and String formatting to display values from the fields specified in Field .</inlineHelpText>
        <label>Message</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>The API name of the object for which the notification is displayed</description>
        <inlineHelpText>The API name of the object for which the notification is displayed</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <description>Use one of the key words ERROR, WARNING, INFO, SUCCESS</description>
        <inlineHelpText>Use one of the key words ERROR, WARNING, INFO, SUCCESS</inlineHelpText>
        <label>Severity</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Notification Banner Settings</label>
</CustomObject>